[package]
name = "low-noise-bot"
version = "0.3.0"
edition = "2021"

[lints.clippy]
pedantic = "warn"

[profile.release]
lto = true
strip = true

[dependencies]
anyhow = "1.0.95"
poise = "0.6.1"
thiserror = "2.0.11"
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
